# maestro

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
app/: agents.py  config.py  orchestrator.py  policy.py  schemas.py  server.py  store.py
app/tools/: cli_executor.py  github_client.py  repo_workspace.py  wiki_context.py
config/: agent.yaml
docs/: api.md  architecture.md  configuration.md  deployment-pi5.md
tests/: conftest.py  test_cli_executor.py  test_cli_executor_auth.py  test_github_client.py  test_orchestrator_integration.py  test_server_readiness.py  test_store.py  test_webhook.py
